<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myselfinfo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        toolbar:title="@string/change_password"></android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:id="@+id/textview_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/old_password"
            android:textSize="@dimen/dimen18dp" />

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_toRightOf="@id/textview_old"
            android:background="@null"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            app:funcType="canClear" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:id="@+id/textview_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_password"
            android:textSize="@dimen/dimen18dp" />

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_toRightOf="@id/textview_new"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            app:eyeOpen="@mipmap/can_see"
            app:funcType="canWatchPwd" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_new2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:id="@+id/textview_new2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_password2"
            android:textSize="@dimen/dimen18dp" />

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/new_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_toRightOf="@id/textview_new2"
            android:background="@null"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            app:eyeOpen="@mipmap/can_see"
            app:funcType="canWatchPwd" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dimen10dp"
        android:text="@string/prompt"
        android:textSize="12dp" />

    <Button
        android:id="@+id/change_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dimen25dp"
        android:background="@color/colorPrimary"
        android:text="@string/sure"
        android:textColor="#80FFFFFF"
        android:textSize="@dimen/dimen18dp" />
</LinearLayout>