<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/p2_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorWhite"></android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:id="@+id/textview_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_phone"
            android:textSize="@dimen/dimen18dp" />

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/test_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_toRightOf="@id/textview_phone"
            android:background="@null"
            android:hint="@string/new_phone_hint"
            android:inputType="phone"
            app:funcType="canClear" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_heigh_50dp">

        <Button
            android:id="@+id/sure_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/sure"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>
</LinearLayout>