<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

<!--    <android.support.v7.widget.Toolbar
        android:id="@+id/myself_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        toolbar:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        toolbar:title="@string/userinfo_title"
        toolbar:titleTextColor="@color/colorWhite"></android.support.v7.widget.Toolbar>-->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="个人资料"
        android:layout_centerInParent="true"
        android:gravity="center"/>
</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorbg"/>
    <RelativeLayout
        android:id="@+id/rl_user_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/userinfo_head"
            android:textSize="@dimen/dimen18dp" />

        <ImageView
            android:id="@+id/right0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_right_gray_24dp" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_toLeftOf="@id/right0"
            android:src="@mipmap/ic_launcher"
           />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_user_nicename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/userinfo_nickname"
            android:textSize="@dimen/dimen18dp" />

        <ImageView
            android:id="@+id/right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_chevron_right_gray_24dp" />

        <TextView
            android:id="@+id/user_nicename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen10dp"
            android:layout_toLeftOf="@id/right1"
            android:textColor="@color/colorGray0"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawable_shape_1dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/userinfo_name"
            android:textSize="@dimen/dimen18dp" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen10dp"
            android:textColor="@color/colorGray0"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawable_shape_1dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/userinfo_phone"
            android:textSize="@dimen/dimen18dp" />

        <ImageView
            android:id="@+id/right3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_chevron_right_gray_24dp" />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen10dp"
            android:layout_toLeftOf="@id/right3"
            android:textColor="@color/colorGray0"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_user_idcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawable_shape_1dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/userinfo_idcard"
            android:textSize="@dimen/dimen18dp" />


        <TextView
            android:id="@+id/user_idcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen10dp"
            android:textColor="@color/colorGray0"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/userinfo_changepasswword"
            android:textSize="@dimen/dimen18dp" />

        <ImageView
            android:id="@+id/right4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_chevron_right_gray_24dp" />

        <TextView
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen10dp"
            android:layout_toLeftOf="@id/right4"
            android:textColor="@color/colorGray0"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorred"
            android:text="@string/userinfo_signout"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen18dp" />
    </RelativeLayout>
</LinearLayout>